syntax = "proto3";

package region;

option go_package = "northwind/proto/region";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "typespb.proto";


service Region {
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/region/{regionID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/region"
            body: "*"
            
        };
    }
    
    rpc RegionByRegionID(RegionByRegionIDRequest) returns (typespb.Region) {
        option (google.api.http) = {
            get: "/v1/region/{regionID}"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/region/{regionID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/region/upsert"
            body: "*"
            
        };
    }
    
}

message DeleteRequest { 
    int32 regionID = 1;
}

message InsertRequest { 
    string regionDescription = 1;
    int32 regionID = 2;
}

message RegionByRegionIDRequest { 
    int32 regionID = 1;
}

message UpdateRequest { 
    string regionDescription = 1;
    // Output only.
    int32 regionID = 2;
}

message UpsertRequest { 
    string regionDescription = 1;
    int32 regionID = 2;
}
