syntax = "proto3";

package territory;

option go_package = "northwind/proto/territory";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "typespb.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "northwind";
        version: "1.0";
        description: "Boilerplate code generated by xo-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "xo-grpc - Walter Wanderley";
            url: "https://github.com/walterwanderley/xo-grpc";
        };
    };
};
service Territory {
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/territory/{TerritoryID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/territory"
            body: "*"
            
        };
    }
    
    rpc Region(RegionRequest) returns (typespb.Region) {
        option (google.api.http) = {
            get: "/v1/territory/region/{RegionID}"
            
        };
    }
    
    rpc TerritoryByTerritoryID(TerritoryByTerritoryIDRequest) returns (typespb.Territory) {
        option (google.api.http) = {
            get: "/v1/territory/{territoryID}"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/territory/{TerritoryID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/territory/upsert"
            body: "*"
            
        };
    }
    
}

message DeleteRequest { 
    string TerritoryID = 1;
}

message InsertRequest { 
    int32 RegionID = 1;
    string TerritoryDescription = 2;
    string TerritoryID = 3;
}

message RegionRequest { 
    int32 RegionID = 1;
}

message TerritoryByTerritoryIDRequest { 
    string territoryID = 1;
}

message UpdateRequest { 
    int32 RegionID = 1;
    string TerritoryDescription = 2;
    // Output only.
    string TerritoryID = 3;
}

message UpsertRequest { 
    int32 RegionID = 1;
    string TerritoryDescription = 2;
    string TerritoryID = 3;
}
